# rubik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/glad/: glad.h
src/: common.h  glad.c  main.cpp
src/cube/: FastRubiksCube.cpp  FastRubiksCube.h  RubiksCube.cpp  RubiksCube.h
src/cube/solve/: database.h  kociemba.cpp  kociemba.h  solver.cpp  solver.h  solver_util.cpp  solver_util.h
src/render/: Camera.cpp  Camera.h  CubeRenderer.cpp  CubeRenderer.h  CubeScanner.cpp  CubeScanner.h  CuberConnection.cpp  CuberConnection.h
src/util/: RedundantMovePreventor.cpp  RedundantMovePreventor.h  easing.h
